@@ -1,15 +1,25 @@
 plugins {
 	kotlin("jvm") version "2.2.10"
 	kotlin("plugin.spring") version "2.2.10"
-	id("org.springframework.boot") version "4.0.0"
+	id("org.springframework.boot") version "4.0.2"
 	id("io.spring.dependency-management") version "1.1.7"
+	id("io.sentry.jvm.gradle") version "6.0.0"
+	id("org.owasp.dependencycheck") version "12.2.0"
 	kotlin("plugin.jpa") version "2.2.10"
 }
 
 group = "server.web"
 version = "0.0.1-SNAPSHOT"
 description = "Projet backend de Casa avec Spring Boot Kotlin"
-
+sentry {
+	// Generates a JVM (Java, Kotlin, etc.) source bundle and uploads your source code to Sentry.
+	// This enables source context, allowing you to see your source
+	// code as part of your stack traces in Sentry.
+	includeSourceContext = true
+	org = "casanayo"
+	projectName = "casanayo"
+	authToken =  System.getenv("SENTRY_AUTH_TOKEN")
+}
 java {
 	toolchain {
 		languageVersion = JavaLanguageVersion.of(17)
@@ -28,6 +38,7 @@ repositories {
 }
 extra["springCloudGcpVersion"] = "7.3.1"
 extra["springCloudVersion"] = "2025.0.0"
+extra["sentryVersion"] = "8.27.0"
 dependencies {
 	implementation("org.springframework.boot:spring-boot-starter-actuator")
 //	implementation("org.springframework.boot:spring-boot-starter-data-jpa")
@@ -35,7 +46,12 @@ dependencies {
 //    implementation("com.vonage:server-sdk-kotlin:2.1.1")
     //twilio
     implementation("com.twilio.sdk:twilio:9.2.1")
-    //redis
+    //patch vulnerabilities dependencies
+	implementation("commons-io:commons-io:2.21.0")
+	implementation("org.json:json:20251224")
+	implementation("com.ongres.scram:scram-common:3.2")
+	implementation("io.netty:netty-codec-http2:4.2.9.Final")
+	implementation("io.grpc:grpc-netty-shaded:1.78.0")
 //    implementation("org.springframework.boot:spring-boot-starter-session-data-redis")
     //websocket
     implementation("org.springframework.boot:spring-boot-starter-websocket")
@@ -72,14 +88,20 @@ dependencies {
     runtimeOnly("io.jsonwebtoken:jjwt-impl:0.12.6")
     runtimeOnly("io.jsonwebtoken:jjwt-jackson:0.12.6")
 	compileOnly("org.projectlombok:lombok")
-
-	implementation("io.r2dbc:r2dbc-postgresql")
+	// @sentry
+	implementation("io.sentry:sentry:8.31.0")
+//	implementation("io.sentry:sentry-opentelemetry-agent:8.22.0")
+//	implementation("io.sentry:sentry-spring-boot-starter-jakarta:8.31.0")
+//	implementation(platform("io.sentry:sentry-bom:8.31.0"))
+	//implementation("io.r2dbc:r2dbc-postgresql")
 	implementation("io.r2dbc:r2dbc-pool:1.0.2.RELEASE")
-	implementation("io.r2dbc:r2dbc-postgresql:0.8.13.RELEASE")
+	//implementation("io.r2dbc:r2dbc-postgresql:0.8.13.RELEASE")
+	implementation("org.postgresql:r2dbc-postgresql:1.1.1.RELEASE")
 	implementation("org.springframework.boot:spring-boot-starter-flyway")
     runtimeOnly("org.postgresql:postgresql")
 	runtimeOnly("org.flywaydb:flyway-database-postgresql:11.19.0")
-	developmentOnly("org.springframework.boot:spring-boot-devtools")
+	runtimeOnly("com.ongres.scram:scram-common:3.2")
+//	developmentOnly("org.springframework.boot:spring-boot-devtools")
 //	developmentOnly("org.springframework.boot:spring-boot-docker-compose")
 	annotationProcessor("org.projectlombok:lombok")
 	testImplementation("org.springframework.boot:spring-boot-starter-flyway-test")
@@ -96,8 +118,10 @@ dependencyManagement {
     imports {
         mavenBom("com.google.cloud:spring-cloud-gcp-dependencies:${property("springCloudGcpVersion")}")
         mavenBom("org.springframework.cloud:spring-cloud-dependencies:${property("springCloudVersion")}")
+//		mavenBom("io.sentry:sentry-bom:${property("sentryVersion")}")
     }
 }
+
 
 
 kotlin {
@@ -111,7 +135,17 @@ allOpen {
 	annotation("jakarta.persistence.MappedSuperclass")
 	annotation("jakarta.persistence.Embeddable")
 }
+configurations.configureEach {
+	exclude(group = "io.sentry", module = "sentry-logback")
+}
+
 
 tasks.withType<Test> {
 	useJUnitPlatform()
+}
+tasks.withType<JavaExec>().configureEach {
+	jvmArgs("--enable-native-access=ALL-UNNAMED")
+}
+tasks.withType<Test>().configureEach {
+	jvmArgs("--enable-native-access=ALL-UNNAMED")
 }
